--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Guoweixin's Homepage
-page-top-title: Yourname
+page-top-title: Guo Weixin
 top-section-bg-text: Be what you wanna be
-home-subtitle: Yourname&ensp;|&ensp;上杉绘梨衣
-copyright-text: '&copy; Yourname 2023-2025. All Rights Reserved.'
+home-subtitle: Guo&ensp;Weixin&ensp;|&ensp;郭维欣
+copyright-text: '&copy; Guo Weixin 2025-2025. All Rights Reserved.'
